--- a/style.css
+++ b/style.css
@@ -61,21 +61,7 @@ h4 {
     font-family: sans-serif;
 }
 
-.sales {
-    overflow: auto;
-    text-align: center;
-}
 
-.cookie_locations {
-    margin: 10px;
-}
+.cookieslocation{
 
-.cookie_locations ul {
-    border-radius: 20px;
-    padding: 20px;
-    float: left;
-    margin-left: 30px;
-    margin-bottom: 40px;
-    background-color: #ffa280;
-    margin-top: 60px;
 }
