--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ h4 {
 }
 
 
-.cookieslocation{
-
+table, th, td {
+    border: 1px solid black;
+    background-color:#ffa280;
+    padding:10px;
 }
